- https://github.com/eclipse-sirius/sirius-components/issues/613[#613] [compatibility] Add support for external java action with the new API `IExternalJavaActionProvider` which allows others to provide instances of `IExternalJavaAction` in order to perform some custom behavior during the execution of a tool for example.

=== Improvements

- https://github.com/eclipse-sirius/sirius-components/issues/799[#799] [diagram] The buttons in the diagram's toolbar now have proper tooltips
- [core] Add a task to display TypeScript errors in the VS Code problems view
- https://github.com/eclipse-sirius/sirius-components/issues/773[#773] [compatibility] The synchronization policy of the node descriptions is now properly computed from the `AbstractNodeMapping`
- https://github.com/eclipse-sirius/sirius-components/issues/694[#694] [core] Data can be provided to Success in order to notify changment made by operation made on the editing context.


== v0.5.0

=== Architectural decision records

- [ADR-024] Add support for view deletion requests
- [ADR-025] Switch to a schema first approach for our GraphQL schema
- [ADR-026] Improve the performance of unsynchronized nodes
- [ADR-027] Make the explorer independent from modeling concepts
- [ADR-028] Move representations out of the explorer
- [ADR-029] Introduce some object services
- [ADR-030] Add a link representation
- [ADR-031] Separate metadata representations
- [ADR-032] Relax our constraints on some of our identifiers
- [ADR-033] Add support for unsynchronized tools

=== Deprecation warning

- [core] The field `ChangeKind#NOTHING` will be removed soon since we have the option to just not send anything at all
- [explorer] Representations will be removed from the explorer soon