@@ -114,6 +114,7 @@ public class EdgeMappingConverter {
 
         ToolConverter toolConverter = new ToolConverter(interpreter, this.editService, this.modelOperationHandlerSwitchProvider);
         var deleteHandler = toolConverter.createDeleteToolHandler(edgeMapping.getDeletionDescription());
+        var labelEditHandler = toolConverter.createDirectEditToolHandler(edgeMapping.getLabelDirectEdit());
 
         Builder builder = EdgeDescription.newEdgeDescription(UUID.fromString(this.identifierProvider.getIdentifier(edgeMapping)))
                 .targetObjectIdProvider(targetIdProvider)
@@ -125,6 +126,7 @@ public class EdgeMappingConverter {
                 .sourceNodesProvider(sourceNodesProvider)
                 .targetNodesProvider(targetNodesProvider)
                 .styleProvider(styleProvider)
+                .labelEditHandler(labelEditHandler)
                 .deleteHandler(deleteHandler);
         optionalBeginLabelDescription.ifPresent(builder::beginLabelDescription);
         optionalCenterLabelDescription.ifPresent(builder::centerLabelDescription);
