@@ -16,6 +16,7 @@ import java.text.MessageFormat;
 import java.util.List;
 import java.util.Objects;
 import java.util.UUID;
+import java.util.function.BiFunction;
 import java.util.function.Function;
 
 import org.eclipse.sirius.web.annotations.Immutable;
@@ -70,6 +71,8 @@ public final class EdgeDescription {
     private Function<VariableManager, EdgeStyle> styleProvider;
 
     private Function<VariableManager, IStatus> deleteHandler;
+
+    private BiFunction<VariableManager, String, IStatus> labelEditHandler;
 
     private EdgeDescription() {
         // Prevent instantiation
@@ -135,6 +138,10 @@ public final class EdgeDescription {
         return this.deleteHandler;
     }
 
+    public BiFunction<VariableManager, String, IStatus> getLabelEditHandler() {
+        return this.labelEditHandler;
+    }
+
     public static Builder newEdgeDescription(UUID id) {
         return new Builder(id);
     }
@@ -181,6 +188,8 @@ public final class EdgeDescription {
         private Function<VariableManager, EdgeStyle> styleProvider;
 
         private Function<VariableManager, IStatus> deleteHandler;
+
+        private BiFunction<VariableManager, String, IStatus> labelEditHandler;
 
         private Builder(UUID id) {
             this.id = Objects.requireNonNull(id);
@@ -257,6 +266,11 @@ public final class EdgeDescription {
             return this;
         }
 
+        public Builder labelEditHandler(BiFunction<VariableManager, String, IStatus> labelEditHandler) {
+            this.labelEditHandler = Objects.requireNonNull(labelEditHandler);
+            return this;
+        }
+
         public EdgeDescription build() {
             EdgeDescription edgeDescription = new EdgeDescription();
             edgeDescription.id = Objects.requireNonNull(this.id);
@@ -274,6 +288,7 @@ public final class EdgeDescription {
             edgeDescription.targetNodesProvider = Objects.requireNonNull(this.targetNodesProvider);
             edgeDescription.styleProvider = Objects.requireNonNull(this.styleProvider);
             edgeDescription.deleteHandler = Objects.requireNonNull(this.deleteHandler);
+            edgeDescription.labelEditHandler = Objects.requireNonNull(this.labelEditHandler);
             return edgeDescription;
         }
     }
